2012-05-14
* split data dump method, so it can be reused in the GUI more easily
* save data from scan in GUI

2012-05-13
* load scan configuration via the menu too
* display tags in GUI
* portability fixes, add stubs for scanning directly from interface
* launch scans via interface and display results in interface. Still to be
added: saving results, plus better filtering of scans

2012-05-12
* don't show scanning menu for non-Linux systems

2012-05-11
* cut more data from scandata.pickle that is not used in the GUI
* add very conservative tagger for GIF files
* add filter to hide (seemingly) empty directories
* portability fixes in batgui
* add list of scans from configuration file (if specified) to checkbox menu

2012-05-10
* move bruteforce scanning functionality to separate file in 'bat'
subdirectory. This will make it a lot easier to make other front ends for BAT,
for example GUI or networked service. Rework top level bruteforce.py to
reflect change.
* move some functionality that is likely not to be used much in GUI to
"advanced mode".
* unpack files that are only needed in advanced mode on the fly instead of
always. This significantly reduces waiting time when opening an archive for
viewing in "simple" mode
* enable "advanced mode" in GUI
* add more filters (resources, PDFs) to GUI

2012-05-09
* write original ranking dump data to separate pickle files. This data is
not used in the GUI directly and is just wasting memory and CPU time.
* adapt GUI to reflect change in dump data format. Also don't unpacking
'ranking' directory with new pickle files: they are not used and unpacking
takes time.
* construct file tree from scandata.pickle instead of walking the data
directory from the dump
* enable interactive filtering of file types via menu

2012-05-08
* add filtering capabilities to GUI

2012-05-07
* fix edge case in Java deserialisation
* add function name match reporting to GUI

2012-05-06
* enable function name scanning in ranking method